# python-code-analyzer

./: LICENSE  README.md  __init__.py  __main__.py  analyzer.py  cli.py  constants.py  generator.py  models.py  project_analyzer.py  pyproject.toml  setup.py
python_code_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  constants.py  generator.py  issue_reporter.py  models.py  project_analyzer.py
python_code_analyzer/renderers/: __init__.py  base.py  html.py  markdown.py  text.py
renderers/: __init__.py  base.py  html.py  markdown.py  text.py
