[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-code-analyzer"
version = "1.0.0"
description = "An annotated directory tree generator with deep Python code analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "dadashzadeh", email = "webdadashzadeh@gmail.com" }
]
keywords = ["directory", "tree", "analyzer", "python", "ast", "complexity", "dead-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/dadashzadeh/python-code-analyzer"
Repository = "https://github.com/dadashzadeh/python-code-analyzer"
Issues = "https://github.com/dadashzadeh/python-code-analyzer/issues"

[project.scripts]
python-code-analyzer = "python_code_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["python_code_analyzer*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=python_code_analyzer --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
